--- a/src/main/resources/assets/foody/lang/en_us.json
+++ b/src/main/resources/assets/foody/lang/en_us.json
@@ -1,3 +1,6 @@
 {
-  "block.foody.fruitpress": "Fruit Press"
+  "itemGroup.tabfoodytabmachinesblocks": "Foody+ Machines/Blocks",
+  "block.foody.fruitpress": "Fruit Press",
+  "block.foody.pealer": "Pealer",
+  "itemGroup.tabfoodytabfood": "Foody+ Food"
 }
