--- a/src/main/resources/assets/foody/lang/en_us.json
+++ b/src/main/resources/assets/foody/lang/en_us.json
@@ -1,7 +1,9 @@
 {
   "itemGroup.tabfoodytabmachinesblocks": "Foody+ Machines/Blocks",
+  "advancements.fruitpressadvancement.descr": "You press that thing!!!",
   "block.foody.fruitpress": "Fruit Press",
   "block.foody.pealer": "Pealer",
   "itemGroup.tabfoodytabfood": "Foody+ Food",
+  "advancements.fruitpressadvancement.title": "Fruit Press Advancement",
   "block.foody.craftingtable": "Craftingtable"
 }
